# backend

./: .env  .gitignore  CLAUDE.md  README.md  pyproject.toml  test.html
.claude/: settings.local.json
app/: main.py
app/agent/: checkpointer.py  main.py
app/agent/config/: redis_config.py
app/agent/llm/: __init__.py  dashscope.py  deepseek.py
app/api/v1/: chat.py  contextual_rag.py  rag.py
app/auth/: __init__.py  api.py  deps.py  models.py  permissions.py  schemas.py  security.py  service.py  token_blocklist.py
app/core/: concurrency.py  config.py  context.py  errors.py  lifespan.py  logging.py  rate_limit.py
app/db/: __init__.py
app/db/mysql/: __init__.py  base.py  session.py
app/db/redis/: __init__.py  clients.py  pool.py
app/rag/: raw_documents.json
app/rag/contextual_rag/: __init__.py  chunking.py  config.py  contextualizer.py  language.py  milvus_client.py  repository.py  schemas.py  service.py  tools.py
app/rag/document_rag/: __init__.py  config.py  language.py  milvus_client.py  repository.py  schemas.py  service.py  tools.py
app/schemas/: openai_types.py  rag_types.py
app/services/: chat_service.py
app/tests/: conftest.py  test_auth_e2e.py  test_rag_async.py  test_rate_limit.py
