[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "fastmcp[tasks]>=3.4.2",
    "httpx>=0.28.1",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt[crypto]>=2.13.0",
    "pytest>=9.0.3",
    "python-multipart>=0.0.29",
    "requests>=2.34.2",
    "pymilvus[model]>=3.0.0",
    "setuptools>=78.1.1,<82",
    "transformers<5.0.0",
    "openai>=2.43.0",
    "tqdm>=4.68.2",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchainhub>=0.1.21",
    "httpx-sse>=0.4.3",
    "huggingface-hub>=0.36.2",
    "datasets>=5.0.0",
    "cohere>=7.0.4",
    "redis<7.2",
    "langchain-deepseek>=1.0.1",
    "langgraph-checkpoint-redis>=0.3.6",
    "langchain-mcp-adapters>=0.1.0",
    "langdetect>=1.0.9",
]
[tool.fastapi]
entrypoint = "app.main:app"

# 这行配置会告诉 pytest 将当前项目根目录 . 加入到 Python 的 sys.path 寻找路径中，从而避免 ModuleNotFoundError [1.1.2]。

[tool.pytest.ini_options]
pythonpath = ["."]
